@@ -1,3 +1,5 @@
+<f:flashMessages renderMode="div" />
+
 <h2 class="uppercase">Project Properties</h2>
 
 <table>
