@@ -1,3 +1,7 @@
+2013-05-17  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Show a FlashMessage when conf.py is temporarily modified for JSON output
+
 2013-05-16  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] #48311: Official TYPO3 manuals cannot be compiled as JSON
